# PennyWise.wtf

./: .env  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
Agent/: agent.py  tools.py
DataProcessing/: database.py  parser.py  preprocess.py
Database/: finance.db
charts/: pie_category_20260124_132035.html  pie_category_20260124_132035.json
